--- a/new_task7/css/style.css
+++ b/new_task7/css/style.css
@@ -662,7 +662,7 @@ a {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-color: rgba(0, 0, 0, .5)
+    background-color: rgba(0, 0, 0, .9)
 }
 
 .modal__dialog {
@@ -717,6 +717,7 @@ a {
 .modal .btn {
     display: block;
     width: 280px;
+    height: 50px;
     margin: 0 auto
 }
 
